--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     var isFxpreview = search.get('preview') === "1"
     // call this method to trigger the preview
     function fxpreview() {
+      window.fxPreviewCalled = true
       console.log("fxhash: TRIGGER PREVIEW")
     }
       //---- /do not edit the following code
